k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: eshop-service
  namespace: NAMESPACE
spec:
  selector:
    app: eshop-deployment
  ports:
  - port: 5000
    targetPort: 5000
  type: LoadBalancer
