k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: eshop-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: "test.eshop.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: eshop
            port:
              number: 8080
